@@ -1,3 +1,13 @@
+2012-08-20  Philippe Normand  <pnormand@igalia.com>
+
+        media/media-document-audio-repaint.html is racy
+        https://bugs.webkit.org/show_bug.cgi?id=94454
+
+        Reviewed by Eric Carlson.
+
+        * media/media-document-audio-repaint.html: Don't rely on the play
+        event. Trigger the display and seek upon receipt of the pause event.
+
 2012-08-21  Keishi Hattori  <keishi@webkit.org>
 
         Fix range-hit-test-with-padding.html by removing unnecessary part.
